crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_3RLN__00.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 3RLN/00
input: "\"1 leading\n    \\ttab\"\n"
diagnostics:

cst:
DOCUMENT@0..22
  YAML_METADATA_CONTENT@0..22
    YAML_STREAM@0..22
      YAML_DOCUMENT@0..22
        YAML_SCALAR@0..21 "\"1 leading\n    \\ttab\""
        NEWLINE@21..22 "\n"
