crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_3RLN__01.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: 3RLN/01
input: "\"2 leading\n    \\\ttab\"\n"
diagnostics:

cst:
YAML_STREAM@0..22
  YAML_DOCUMENT@0..22
    YAML_SCALAR@0..21
      YAML_SCALAR_TEXT@0..21 "\"2 leading\n    \\\ttab\""
    NEWLINE@21..22 "\n"
