crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_3RLN__02.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: 3RLN/02
input: "\"3 leading\n    \ttab\"\n"
diagnostics:

cst:
YAML_STREAM@0..21
  YAML_DOCUMENT@0..21
    YAML_SCALAR@0..20
      YAML_SCALAR_TEXT@0..20 "\"3 leading\n    \ttab\""
    NEWLINE@20..21 "\n"
