crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_3RLN__03.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 3RLN/03
input: "\"4 leading\n    \\t  tab\"\n"
diagnostics:

cst:
YAML_STREAM@0..24
  YAML_DOCUMENT@0..24
    YAML_SCALAR@0..23
      YAML_SCALAR_TEXT@0..10 "\"4 leading"
      NEWLINE@10..11 "\n"
      YAML_SCALAR_TEXT@11..23 "    \\t  tab\""
    NEWLINE@23..24 "\n"
