crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_3RLN__05.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 3RLN/05
input: "\"6 leading\n    \t  tab\"\n"
diagnostics:

cst:
DOCUMENT@0..23
  YAML_METADATA_CONTENT@0..23
    YAML_STREAM@0..23
      YAML_DOCUMENT@0..23
        YAML_SCALAR@0..22 "\"6 leading\n    \t  tab\""
        NEWLINE@22..23 "\n"
